k8s/sharedlbs/dummy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-service
  namespace: sharedlbs
spec:
  ports:
    - port: 80
      targetPort: 8080
